--- a/research.html
+++ b/research.html
@@ -25,13 +25,14 @@
 		</li>
 		<li>
 			<p style="text-align:left;">&nbsp;<a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/Dyadic_Regression_with_Block-Specific_Fixed_Effects_and_Application_to_Input-Output_Matrix.pdf">Dyadic Regression with Block-Specific Fixed Effects and Application to Input-Output Matrix</a>
+			</p>
 			<p1><b>Abstract:</b>
 			Viewing the Input-Output matrix as a network of industries, this article studies how exogenous shocks, such as changes in tax rates and import duty rates, can affect relationships between industries within the U.S. economy. It also proposes a method for making counterfactual predictions on the Input-Output Matrix. A key innovation is utilizing a stochastic blockmodel to group industries into blocks, so that pairs of industries that belong to the same pair of blocks share common pairwise block-specific fixed effects. It uses dyadic regression model to estimate model parameters, together with pairwise block-specific fixed effects. An empirical analysis using the 2017 U.S. Input-Output Matrix shows that the supplier-buyer relationship between commodities (or industries) are sensitive to changes in net tax rates and import duty rates.
 			</p1>	
 		</li>
 		<li>
-			<p style="text-align:left;">&nbsp;<a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/Communities_and_Centralities_in_Supplier-Buyer_Network_of_the_U.S._Tech_Sector.pdf">Network of Loyalty Programs: A Sequential Formation</a>
-			<p style="text-align:left;">&nbsp;Communities and Centralities of Supplier-Buyer Network of the U.S. Tech Sector</p>
+			<p style="text-align:left;">&nbsp;<a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/Communities_and_Centralities_in_Supplier-Buyer_Network_of_the_U.S._Tech_Sector.pdf">Communities and Centralities of Supplier-Buyer Network of the U.S. Tech Sector</a>
+			</p>
 			<p1><b>Abstract:</b>
 			Analysis of the U.S. tech sector's supplier-buyer network shows a strengthening of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. Supplier-buyer interactions within each ecosystem is far greater than across ecosystems, indicating exclusivity in suppliers and buyers around each of the four firms. Moreover, the substantial growth of AAPL and MSFT's significance, or centrality, in the network and their ecosystems underscore their rising dominance within the U.S. tech sector.
 			</p1>
