--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
         <img <img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg" width="500" height="529" alt="Seongjoo Min">
         <div>
             <h1>Seongjoo Min</h1>
-            <p>I am a researcher focusing on econometrics and network formation. I received a Ph.D. in economics from UC Berkeley in 2020.</p>
+            <p>I am a researcher focusing on econometrics and network formation.
+				<br>I received a Ph.D. in economics from UC Berkeley in 2020.
+			</p>
             <div style="margin-top: 20px;">
                 <a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" class="btn">Curriculum Vitae</a>
                 <a href="mailto:seongjoom@gmail.com" class="btn">Email</a>
