--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div>
             <h1>Seongjoo Min</h1>
             <p>I am a researcher focusing on econometrics and network formation.
-				<br>I received a Ph.D. in economics from UC Berkeley in 2020.
+				<br>I received my Ph.D. in economics from UC Berkeley in 2020.
 			</p>
             <div style="margin-top: 20px;">
                 <a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" class="btn">Curriculum Vitae</a>
