--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</ul>
         </div>
 		<div class="card">
-		    <h2></h2>Selected Student Feedback (I really appreciate everyone who has taken my course!)</h2>
+		    <h3>Selected Student Feedback (I really appreciate everyone who has taken my course!)</h3>
 			<ul type="disc">
 				<li><font size="+1">"Professor Min is amazing! One of the best professors I have ever had at Iowa. Funny, well-spoken, and always highly focused on how he is conveying content."</font></li>
 				<li><font size="+1">"Thanks for alway being available during office hours. Your jokes also made lecture much more enjoyable to be in."</font></li>
