--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</ul>
 			<p><b>Academic Year 2023-2024</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
+				<li><p></p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</p></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [5, 6, 4, 4, 6, 6]</font></li>
 			</ul>
 			<p><b>Academic Year 2022-2023</b></p>
