--- a/index.html
+++ b/index.html
@@ -159,29 +159,29 @@
 			*Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support] reported in student course evaluation. Score ranges from 1 to 6, and higher is better.
             <p><b>Academic Year 2024-2025</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [N/A] </font></li>
-				<li><font size="+1">ECON:4800 Econometric Analysis: Advanced Causal Inference with Data <br> [5.5, 5, 6, 5.5, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics: Causal Inference with Data <br> [6, 6, 6, 5, 6, 6]</font></li>
+				<li><p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [N/A]</p></li>
+				<li><p>ECON:4800 Econometric Analysis: Advanced Causal Inference with Data <br> [5.5, 5, 6, 5.5, 6, 6]</p></li>
+				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data <br> [6, 6, 6, 5, 6, 6]</p></li>
 			</ul>
 			<p><b>Academic Year 2023-2024</b></p>
 			<ul type="disc">
 				<li><p></p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</p></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [5, 6, 4, 4, 6, 6]</font></li>
+				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [5, 6, 4, 4, 6, 6]</p></li>
 			</ul>
 			<p><b>Academic Year 2022-2023</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [5.5, 5, 5.5, 6, 6, 6]</font></li>
+				<li><p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</p></li>
+				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [5.5, 5, 5.5, 6, 6, 6]</p></li>
 			</ul>
 			<p><b>Academic Year 2021-2022</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 5.5, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [6, 5.5, 5.5, 5.5, 5.5, 6]</font></li>
+				<li><p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 5.5, 6, 6, 6]</p></li>
+				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data (two courses) <br> [6, 5.5, 5.5, 5.5, 5.5, 6]</p></li>
 			</ul>
 			<p><b>Academic Year 2020-2021</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 5, 5, 5.5, 5.5, 6]</font></li>
-				<li><font size="+1">ECON:3355 Economic and Business Forecasting <br> [6, 5.5, 5.5, 6, 5.5, 6]</font></li>
+				<li><p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 5, 5, 5.5, 5.5, 6]</p></li>
+				<li><p>ECON:3355 Economic and Business Forecasting <br> [6, 5.5, 5.5, 6, 5.5, 6]</p></li>
 			</ul>
         </div>
 		<div class="card">
