--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h2>Teaching</h2>
         <div class="card">
             <h3>Courses at the University of Iowa</h3>
-			*Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support] reported in student course evaluation. Score ranges from 1 to 6, and higher is better.
+			Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support] reported in student course evaluation. Score ranges from 1 to 6, and higher is better.
             <p><b>Academic Year 2024-2025</b></p>
 			<ul type="disc">
 				<li><p>ECON:5800 Econometrics (first-year Ph.D. course) <br> [N/A]</p></li>
