--- a/index.html
+++ b/index.html
@@ -157,10 +157,12 @@
         <h2>Teaching</h2>
         <div class="card">
             <h3>Courses at the University of Iowa</h3>
+			<ul type="disc">
 				<li><p>ECON:5800 Econometrics (first-year Ph.D. course)</p></li>
 				<li><p>ECON:4800 Econometric Analysis: Advanced Causal Inference with Data</p></li>
 				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data</p></li>
 				<li><p>ECON:3355 Economic and Business Forecasting</p></li>
+			</ul>
 		    <h3>Selected Student Feedback (I really appreciate everyone who has taken my course!)</h3>
 			<ul type="disc">
 				<li><p>"Professor Min is amazing! One of the best professors I have ever had at Iowa. Funny, well-spoken, and always highly focused on how he is conveying content."</p></li>
