--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</ul>
 		</div>
 		<div class="card">
-		    <h3>Selected Student Feedback (Huge thanks to everyone who took the course. It’s been a pleasure having you!)</h3>
+		    <h3>Selected Student Feedback (Huge thanks to everyone who took my course(s)!)</h3>
 			<ul type="disc">
 				<li><p>"Professor Min is amazing! One of the best professors I have ever had at Iowa. Funny, well-spoken, and always highly focused on how he is conveying content."</p></li>
 				<li><p>"Thanks for alway being available during office hours. Your jokes also made lecture much more enjoyable to be in."</p></li>
