--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         <div class="card">
             <h3>Courses at the University of Iowa</h3>
 			<ul type="disc">
-				<li><p>ECON:5800 Econometrics (first-year Ph.D. course)</p></li>
-				<li><p>ECON:4800 Econometric Analysis: Advanced Causal Inference with Data</p></li>
-				<li><p>ECON:3300 Introduction to Econometrics: Causal Inference with Data</p></li>
-				<li><p>ECON:3355 Economic and Business Forecasting</p></li>
+				<li><p>Econometrics (first-year Ph.D. course) [ECON:5800]</p></li>
+				<li><p>Econometric Analysis: Advanced Causal Inference with Data [ECON:4800]</p></li>
+				<li><p>Introduction to Econometrics: Causal Inference with Data [ECON:3300]</p></li>
+				<li><p>Economic and Business Forecasting [ECON:3355]</p></li>
 			</ul>
 		</div>
 		<div class="card">
